# AI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  Dockerfile  README.md  WORKFLOW_GUIDE.md  docker-compose.yml  image_download.py  plan.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/: .gitignore  advanced_system.py  file_metadata.json  main.py  test.py  test_settings.py
src/app/: config.py  schemas.py
src/app/core/: api_adapter.py  file_manager.py  history.py  kb_manager.py  rag_engine.py
src/app/routers/: chat.py  files.py  history.py  kb.py  prompts.py  settings.py  workflows.py
src/app/workflow/: __init__.py  engine.py  manager.py  schemas.py
src/chroma_db/: .gitignore
src/data_uploads/: shuju.xlsx
src/static/: index.html  script.js  style.css  workflow-editor.html
src/static/css/: style-new.css  style.css  workflow-editor.css
src/static/js/: main.js  router.js  state.js  utils.js  workflow-editor.js
src/static/js/modules/: chat.js  files.js  history.js  kb.js  prompts.js  settings.js
